# Projeto-I

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
DataBox/: asgi.py  settings.py  urls.py  wsgi.py
DataBox/static/: landing.css  landing.html  system.css
DataBox/static/JS/: go_get_started.js
DataBox/static/css/: landing.css
DataBox/templates/: auth_base.html  landing.html
DriveClone/: asgi.py  settings.py  urls.py  wsgi.py
auth_staff/: urls.py  views.py
auth_staff/templates/: login_staff.html  register_staff.html
auth_user/: urls.py  views.py
auth_user/templates/: login_user.html  register_user.html
databox/: Dockerfile  db.sqlite3  docker-compose.yaml  makefile  manage.py  pyproject.toml
databox/databox/: asgi.py  settings.py  urls.py  wsgi.py
databox/user_auth/: forms.py  models.py  urls.py  views.py
databox/user_auth/templates/: base.html  landing_page.html  staff_login.html  staff_register.html  user_login.html  user_register.html
databox/user_drive/: apps.py  forms.py  models.py  urls.py  views.py
databox/user_drive/migrations/: 0001_initial.py  0002_alter_file_file.py  0002_alter_folder_managers_file_folder_alter_file_file.py  0002_alter_folder_nestedfolder.py  0003_alter_file_file.py  (+10 more)
getstarted/: apps.py  urls.py  views.py
getstarted/templates/: get_started.html
landing/: models.py  urls.py  views.py
landing/migrations/: 0001_initial.py
landing/templates/: landing_page.html
playground/: models.py  urls.py
staticfiles/css/: landing.css
(+19 files in other folders)
