[tool.poetry]
name = "projeto-i"
version = "0.1.0"
description = ""
authors = ["Rafael Matias <rafamatias102@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
mysqlclient = "^2.2.4"
django-orm = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
